--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,6 @@ matplotlib==3.3.2
 numpy==1.18.5
 tensorflow==2.3.1
 opencv-python==4.4.0.44
+Flask==1.1.2
+requests==2.24.0
+requests-oauthlib==1.3.0
